# Face_recognition

./: .gitignore  AUDIT_REPORT.md  CTemptest_payload.json  Dockerfile_1  PROJECT_MAP.md  PYTHON_ENHANCEMENT_ROADMAP.md  ROAD_MAP.md  SYSTEM_REFERENCE.md  docker-compose.yml  gate_events_local.db
.build-check/: .msCoverageSourceRootsMapping_GateVision.Api.Tests  GateVision.Api.Tests.deps.json  GateVision.Api.deps.json  MvcTestingAppManifest.json  appsettings.Development.json
.claude/: settings.json  settings.local.json
GateVision.Api/: .env.example  Dockerfile  GateVision.Api.csproj  Program.cs  appsettings.Development.json  appsettings.json
GateVision.Api.Tests/: ApiHealthTests.cs  GateVision.Api.Tests.csproj  UnitTest1.cs
config/: python_settings.json  python_settings_v2.json  video_source.json  video_source_v2.json
dashboard/: .env.example  Dockerfile  PERF.md  lighthouserc.js  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo
db/: seed.sql
gate_vision_agenthikvision/: detector.py  main.py  requirements.txt  routes.py
gate_vision_agentwebcam/: capture.py  config.py  config_loader.py  detector.py  main.py  processing.py  requirements.txt  routes.py
gate_vision_ai/: .env.example  Dockerfile  __main__.py  capture.py  client.py  config.py  config_loader.py  detector.py  embedder.py  enhancement.md  hikvision.py  local_buffer.py  main.py  processing.py  pyproject.toml  quality.py  routes.py  window.py
gate_vision_ai/gate_vision_ai.egg-info/: PKG-INFO  SOURCES.txt
gate_vision_ai_v1/: .env.example  __main__.py  backend_client.py  capture.py  client.py  config.py  config_loader.py  detector.py  embedder.py  main.py  processing.py  pyproject.toml  (+9 more)
(+249 files in other folders)
