[project]
name = "gate_vision_ai"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "opencv-python>=4.9.0",
    "insightface>=0.7.3",
    "onnxruntime-gpu>=1.18.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.3.0",
    "numpy>=1.26.0",
]

[tool.setuptools.packages.find]
include = ["gate_vision_ai*"]

[project.scripts]
gate_vision_ai = "gate_vision_ai.main:main"
